# holochat-rust

./: .gitignore  .hcignore  README.md  app.json  config.toml  container-config.toml
test/: index.js  package.json
ui/: holo_chat.js  holoclient.js  holoclient.map  index.html
zomes/chat/: zome.json
zomes/chat/code/: Cargo.toml
zomes/chat/code/src/: channel.rs  lib.rs  member.rs  message.rs  utils.rs
